te body overflow is fixed

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     display: flex;
     justify-content: center;
     font-family: 'Share Tech Mono', monospace;
+    overflow-x: hidden;
     
 }
 
